--- a/src/styles/experience.css
+++ b/src/styles/experience.css
@@ -1,9 +1,24 @@
-/* Timeline list styles */
+/* Estilos de la experiencia profesional */
 .timeline {
   list-style: none;
   padding: 0;
+  border-left: 3px solid #ff9800;
+  margin-left: 1rem;
 }
 
 .timeline li {
-  margin-bottom: 1.5rem;
+  margin: 1.5rem 0;
+  padding-left: 1rem;
+  position: relative;
+}
+
+.timeline li::before {
+  content: '';
+  position: absolute;
+  left: -7px;
+  top: 5px;
+  width: 12px;
+  height: 12px;
+  background-color: #ff9800;
+  border-radius: 50%;
 }
