--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -92,10 +92,17 @@
   text-decoration: none;
   font-weight: bold;
   transition: background-color 0.3s ease;
-  display: block;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  justify-content: center;
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
+}
+
+.download-button img {
+  width: 24px;
+  height: 24px;
 }
 
 .download-button:hover {
