--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  background-color: #222;
+  background-color: #222, 0.8;
   color: #fff;
   position: sticky;
   top: 0;
